--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -11,4 +11,9 @@
     z-index:3;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.logo-container h1{
+    margin-top: 1.3rem;
 }
