fully query funtioned

--- a/src/Navigation/nav.css
+++ b/src/Navigation/nav.css
@@ -1,13 +1,14 @@
-nav{
+nav {
     display: flex;
     border-bottom: 2px solid #f3f3f3;
     justify-content: space-around;
     align-items: center;
     padding: 20px;
     z-index: 999;
-    margin-left: 2px;
+    margin-left: 2rem;
 }
-input{
+
+input {
     padding: 12px 20px;
     border: none;
     background: #f7f6f6;
@@ -17,7 +18,8 @@ input{
     position: relative;
     width: 14rem;
 }
-.nav-icons{
+
+.nav-icons {
     width: 1.5rem;
     height: 1.5rem;
     margin-left: 2rem;
